--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -8,8 +8,6 @@ title: Page1
 .main
 	.hero_img
 		%img.hero(src="/images_s/hero/hero2.png")
-	-# .hero_bar
-	-# 	%img.bar(src="/images_s/hero/bg_bottom.png")
 	.magzine_wrapper
 		.index_row
 			.mag_box_large_wrapper
@@ -215,52 +213,165 @@ title: Page1
 						.line_dark
 						.tag_big
 							PUBLIC HEALTH
-						
-
-
-
-
-
-	-# .index_wrapper
-	-# 	.index_row
-	-# 		%section1
-	-# 			%h1.section_title Trending Now
-	-# 			%h3.section_summary Sit Down And Have A Great Time
-	-# 			.line
-	-# 			.box
-	-# 				.picBox
-	-# 					.thumbnail
-	-# 						%img(src="/images/index/BreakingBad.jpg")
-	-# 			.box
-	-# 				.picBox
-	-# 					.thumbnail
-	-# 						%img(src="/images/index/GameOfThrones.jpg")
-	-# 			.box
-	-# 				.picBox
-	-# 					.thumbnail
-	-# 						%img(src="/images/index/BetterCallSaul.jpg")
-	-# 			.box
-	-# 				.picBox
-	-# 					.thumbnail
-	-# 						%img(src="/images/index/homeland.jpg")
-	-# 	.index_row
-	-# 		%section1
-	-# 			%h1.section_title Trending Now
-	-# 			%h3.section_summary Sit Down And Have A Great Time
-	-# 			.line
-	-# 			.box
-	-# 				.picBox
-	-# 					.thumbnail
-	-# 						%img(src="/images/index/BreakingBad.jpg")
-	-# 			.box
-	-# 				.picBox
-	-# 					.thumbnail
-	-# 						%img(src="/images/index/GameOfThrones.jpg")
-	-# 			.box
-	-# 				.picBox
-	-# 					.thumbnail
-	-# 						%img(src="/images/index/BetterCallSaul.jpg")
-	-# 			.box
-	-# 				.picBox
-	-# 					.thumbnail
-	-# 						%img(src="/images/index/homeland.jpg")
+	.shelf_wrapper
+		.index_row
+			.section_title
+				%h1 RECOMMENDED FOR YOU
+			.section_line
+			.card_tiny_wrapper_1
+				.card_tiny_recommend
+					.card_tiny_recommend_text
+						.recommend_text
+							Because you like:
+						.post_title_tiny
+							17 Governors Agree to Pursue Clean Energy Goals 
+			.card_tiny_wrapper
+				.card_tiny
+					.card_picBox_tiny
+						.card_thumbnail_tiny
+							%img(src="/images_s/card_tiny/pic1.png")
+					.card_tiny_text
+						.post_title_tiny
+							The Dark Side of LED Lightbulbs
+					.card_tiny_text_bottom
+						.line_dark_tiny
+						.tag_tiny
+							SUSTAINABILITY
+			.card_tiny_wrapper
+				.card_tiny
+					.card_picBox_tiny
+						.card_thumbnail_tiny
+							%img(src="/images_s/card_tiny/pic2.png")
+					.card_tiny_text
+						.post_title_tiny
+							Living in a Quantum World
+					.card_tiny_text_bottom
+						.line_dark_tiny
+						.tag_tiny
+							SUSTAINABILITY
+			.card_tiny_wrapper
+				.card_tiny
+					.card_picBox_tiny
+						.card_thumbnail_tiny
+							%img(src="/images_s/card_tiny/pic3.png")
+					.card_tiny_text
+						.post_title_tiny
+							Could a Lack of Water Cause Wars?
+					.card_tiny_text_bottom
+						.line_dark_tiny
+						.tag_tiny
+							CLIMATE
+	.shelf_wrapper
+		.index_row
+			.section_title
+				%h1 SPECIAL REPORT
+			.section_line
+			.card_special_wrapper
+				.text_special_wrapper
+					.topic_title
+						The Discovery of Gravitational Waves
+					.topic_description
+						All you need to know about the ripples in spacetime detected by LIGO
+					.topic_time
+						February 14, 2016
+				.card_tiny_special_wrapper
+					.card_tiny_wrapper_R
+						.card_tiny
+							.card_picBox_tiny
+								.card_thumbnail_tiny
+									%img(src="/images_s/report/img1.png")
+							.card_tiny_text
+								.post_title_tiny
+									Gravitational Waves Discovered from Colliding Black Holes
+							.card_tiny_text_bottom
+								.line_dark_tiny
+								.tag_tiny
+									THE SCIENCES - SPACE
+					.card_tiny_wrapper_R
+						.card_tiny
+							.card_picBox_tiny
+								.card_thumbnail_tiny
+									%img(src="/images_s/report/img2.png")
+							.card_tiny_text
+								.post_title_tiny
+									Gravitational Waves Are the Ringing of Spacetime
+							.card_tiny_text_bottom
+								.line_dark_tiny
+								.tag_tiny
+									THE SCIENCES
+					.card_tiny_wrapper_R
+						.card_tiny
+							.card_picBox_tiny
+								.card_thumbnail_tiny
+									%img(src="/images_s/report/img3.png")
+							.card_tiny_text
+								.post_title_tiny
+									Watch How Gravitational Waves Dance across the…
+							.card_tiny_text_bottom
+								.line_dark_tiny
+								.tag_tiny
+									THE SCIENCES - SPACE
+	.shelf_wrapper
+		.index_row
+			.section_title
+				%h1 INFOGRAPHIC OF THE WEEK
+			.section_line
+			.card_info_wrapper
+				.text_info_wrapper
+					.topic_info_time
+						By Amanda Montañez on February 17, 2016
+					.topic_info_title
+						The Data, My Friend, Is Blowing in the Wind
+					.topic_info_description
+						Interactive data visualization maps predicted wind speeds around the world
+					.view_more
+						VIEW MORE
+	.shelf_wrapper
+		.index_row
+			.section_title
+				%h1 VIDEO
+			.section_line
+			.card_video_wrapper
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/video/img1.png")
+					.card_video_text
+						.video_title
+							Space Junk Litters the Solar...
+			.card_video_wrapper
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/video/img2.png")
+					.card_video_text
+						.video_title
+							Soft Robots
+			.card_video_wrapper
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/video/img3.png")
+					.card_video_text
+						.video_title
+							When Black Holes Collide
+			.card_video_wrapper
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/video/img4.png")
+					.card_video_text
+						.video_title
+							Fish on Evolution’s Fast Track
